--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,30 +1,102 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
+<!--<!DOCTYPE HTML>-->
+<!--<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8"/>-->
+<!--    <title>Личный кабинет</title>-->
+<!--    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>-->
+<!--</head>-->
+<!--<body>-->
+<!--<h1>Личный кабинет</h1>-->
+<!--<div>-->
+<!--    <tr th:each="user: ${user}">-->
+<!--        <th>Имя: </th>-->
+<!--        <td th:utext="${user.getUsername()}">...</td>-->
+<!--        <br/>-->
+<!--        <th>Фамилия: </th>-->
+<!--        <td th:utext="${user.getLastname()}">...</td>-->
+<!--        <br/>-->
+<!--        <th>Почта: </th>-->
+<!--        <td th:utext="${user.getEmail()}">...</td>-->
+<!--        <br/>-->
+<!--        <th>Права доступа: </th>-->
+<!--        <td th:utext="${user.getAuthorities()}">...</td>-->
+<!--    </tr>-->
+<!--    <br/>-->
+<!--    <form style="display: inline-block;" th:action="@{/logout}">-->
+<!--        <input type="submit" value="Выйти"/>-->
+<!--    </form>-->
+<!--</div>-->
+<!--</body>-->
+<!--</html>-->
+<!DOCTYPE html>
+<html lang="ru" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8"/>
-    <title>Личный кабинет</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
+    <meta charset="utf-8">
+    <title>Профиль пользователя</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+          crossorigin="anonymous">
 </head>
+
 <body>
-<h1>Личный кабинет</h1>
-<div>
-    <tr th:each="user: ${user}">
-        <th>Имя: </th>
-        <td th:utext="${user.getUsername()}">...</td>
-        <br/>
-        <th>Фамилия: </th>
-        <td th:utext="${user.getLastname()}">...</td>
-        <br/>
-        <th>Почта: </th>
-        <td th:utext="${user.getEmail()}">...</td>
-        <br/>
-        <th>Права доступа: </th>
-        <td th:utext="${user.getAuthorities()}">...</td>
-    </tr>
-    <br/>
-    <form style="display: inline-block;" th:action="@{/logout}">
-        <input type="submit" value="Выйти"/>
-    </form>
+<header>
+    <nav class="bg-dark navbar navbar-light">
+        <span class="h1 mb-0 navbar-brand text-light"
+              th:text="${user.email} + ' with role: ' + ${user.getListRole()}"></span>
+        <a href="/logout" class="display-10 text-muted">Logout</a>
+    </nav>
+</header>
+<!-- ОСНОВНАЯ СТРАНИЧКА -->
+<div class="row">
+    <div class="col-2">
+        <div class="list-group" id="list-tab" role="tablist">
+            <a class="list-group-item list-group-item-action active" id="list-profile-list" data-toggle="list"
+               href="#list-profile" role="tab" aria-controls="profile">User</a>
+        </div>
+    </div>
+    <div class="col-10">
+        <div class="tab-content" id="nav-tabContent">
+            <div class="tab-pane fade show active" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
+                <!-- Содержимое USER  вкладки -->
+                <div class="col-10">
+                    <h1>Личный кабинет</h1>
+                    <div class="card-header float-none text-left">О пользователе</div>
+                    <div class="card-body text-primary">
+                        <table class="table">
+                            <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Имя</th>
+                                <th>Фамилия</th>
+                                <th>Email</th>
+                                <th>Права доступа</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="user: ${user}">
+                                <td th:utext="${user.getId()}">...</td>
+                                <td th:utext="${user.getUsername()}">...</td>
+                                <td th:utext="${user.getLastname()}">...</td>
+                                <td th:utext="${user.getEmail()}">...</td>
+                                <td th:utext="${user.getAuthorities()}">...</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 </html>
